--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "husky": "^9.1.7",
+    "lint-staged": "^14.0.1",
     "prettier": "^3.5.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1"
   },
+  "lint-staged": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
