--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "commitizen": "^4.3.1",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.6",
@@ -22,7 +24,6 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1"
   },
-  "lint-staged": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
