--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "2025",
   "type": "module",
   "scripts": {
-    "fix": "",
-    "lint": "eslint",
-    "prepare": "husky"
+    "dev": "pnpm -r --parallel --filter='./packages/*' run dev",
+    "build": "pnpm -r --filter='./packages/*' run build",
+    "lint": "eslint --cache .",
+    "prepare": "husky",
+    "format": "prettier --write --cache ."
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
@@ -23,12 +25,6 @@
     "prettier": "^3.5.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "prettier --write",
-      "eslint ."
-    ]
   },
   "keywords": [],
   "author": "",
