--- a/apps/knc/package.json
+++ b/apps/knc/package.json
@@ -14,13 +14,15 @@
   "dependencies": {
     "@sb-ppf/cli": "workspace:*",
     "@sb-ppf/ui": "workspace:*",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "axios": "^1.8.4",
+    "immutable": "^5.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "^2.0.5",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "vite": "^6.2.0",
     "vite-plugin-eslint": "^1.8.1"
