--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "pnpm -r --filter='./packages/*' run build",
     "lint": "eslint --cache .",
     "prepare": "husky",
-    "format": "prettier --write --cache ."
+    "format": "prettier --write --cache .",
+    "test": "vitest run"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
@@ -24,7 +25,8 @@
     "lint-staged": "^15.5.0",
     "prettier": "^3.5.3",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1"
+    "typescript-eslint": "^8.24.1",
+    "vitest": "^3.1.1"
   },
   "keywords": [],
   "author": "",
