--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@sb-ppf/cli",
   "bin": {
-    "ppf": "./dist/index.js"
+    "peaches": "./dist/index.js"
   },
   "scripts": {
     "dev": "tsup --watch",
