--- a/apps/knc/package.json
+++ b/apps/knc/package.json
@@ -12,12 +12,15 @@
     "dev:ppf": "ppf --watch"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@sb-ppf/cli": "workspace:*",
     "@sb-ppf/ui": "workspace:*",
     "axios": "^1.8.4",
     "immutable": "^5.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.55.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@nabla/vite-plugin-eslint": "^2.0.5",
