--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,6 +3,20 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.mts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.mts"
+    },
+    "./Button": {
+      "import": "./dist/Button/index.mjs",
+      "types": "./dist/Button/index.d.mts"
+    },
+    "./TextField": {
+      "import": "./dist/TextField/index.mjs",
+      "types": "./dist/TextField/index.d.mts"
+    }
+  },
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup"
