--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,5 +28,10 @@
   "peerDependencies": {
     "react": "19.1.0",
     "react-dom": "19.1.0"
+  },
+  "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2"
   }
 }
